--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "codyhouse-docs",
 	"displayName": "CodyHouse Docs",
 	"description": "CodyHouse Framework Docs",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"publisher": "CodyHouse",
 	"engines": {
 		"vscode": "^1.35.0"
@@ -65,6 +65,7 @@
 		"onCommand:extension.codyhouseDocsUtilitiesBorders",
 		"onCommand:extension.codyhouseDocsUtilitiesBorderRadius",
 		"onCommand:extension.codyhouseDocsUtilitiesBoxShadow",
+		"onCommand:extension.codyhouseDocsUtilitiesMediaWrapper",
 		"onCommand:extension.codyhouseDocsUtilitiesMisc",
 		"onCommand:extension.codyhouseDocsVisibility",
 		"onCommand:extension.codyhouseDocsVisibilityDisplayHide",
@@ -287,8 +288,12 @@
 				"title": "CodyHouse Docs: Utilities > Box Shadow"
 			},
 			{
+				"command": "extension.codyhouseDocsUtilitiesMediaWrapper",
+				"title": "CodyHouse Docs: Utilities > Media Wrapper"
+			},
+			{
 				"command": "extension.codyhouseDocsUtilitiesMisc",
-				"title": "CodyHouse Docs: Utilities > Misc"
+				"title": "CodyHouse Docs: Utilities > Clearfix"
 			},
 			{
 				"command": "extension.codyhouseDocsVisibility",
