--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"version": "0.1.0",
 	"publisher": "CodyHouse",
 	"engines": {
-		"vscode": "^1.35.0"
+		"vscode": "^1.36.0"
 	},
 	"categories": [
 		"Other"
@@ -51,18 +51,24 @@
 		"onCommand:extension.codyhouseDocsTypographyUtilities",
 		"onCommand:extension.codyhouseDocsUtilities",
 		"onCommand:extension.codyhouseDocsUtilitiesFlex",
+		"onCommand:extension.codyhouseDocsUtilitiesJustify",
+		"onCommand:extension.codyhouseDocsUtilitiesAlign",
+		"onCommand:extension.codyhouseDocsUtilitiesOrder",
 		"onCommand:extension.codyhouseDocsUtilitiesDisplay",
 		"onCommand:extension.codyhouseDocsUtilitiesMargin",
 		"onCommand:extension.codyhouseDocsUtilitiesPadding",
 		"onCommand:extension.codyhouseDocsUtilitiesVAlignment",
 		"onCommand:extension.codyhouseDocsUtilitiesTypography",
+		"onCommand:extension.codyhouseDocsUtilitiesWhiteSpace",
 		"onCommand:extension.codyhouseDocsUtilitiesColor",
 		"onCommand:extension.codyhouseDocsUtilitiesWidth",
 		"onCommand:extension.codyhouseDocsUtilitiesHeight",
 		"onCommand:extension.codyhouseDocsUtilitiesMaxWidth",
 		"onCommand:extension.codyhouseDocsUtilitiesMinWidth",
 		"onCommand:extension.codyhouseDocsUtilitiesPosition",
+		"onCommand:extension.codyhouseDocsUtilitiesZIndex",
 		"onCommand:extension.codyhouseDocsUtilitiesOverflow",
+		"onCommand:extension.codyhouseDocsUtilitiesOpacity",
 		"onCommand:extension.codyhouseDocsUtilitiesBackground",
 		"onCommand:extension.codyhouseDocsUtilitiesBorders",
 		"onCommand:extension.codyhouseDocsUtilitiesBorderRadius",
@@ -235,6 +241,18 @@
 				"title": "CodyHouse Docs: Utilities > Flexbox"
 			},
 			{
+				"command": "extension.codyhouseDocsUtilitiesJustify",
+				"title": "CodyHouse Docs: Utilities > Justify Content"
+			},
+			{
+				"command": "extension.codyhouseDocsUtilitiesAlign",
+				"title": "CodyHouse Docs: Utilities > Align Items"
+			},
+			{
+				"command": "extension.codyhouseDocsUtilitiesOrder",
+				"title": "CodyHouse Docs: Utilities > Order"
+			},
+			{
 				"command": "extension.codyhouseDocsUtilitiesDisplay",
 				"title": "CodyHouse Docs: Utilities > Display"
 			},
@@ -248,11 +266,15 @@
 			},
 			{
 				"command": "extension.codyhouseDocsUtilitiesVAlignment",
-				"title": "CodyHouse Docs: Utilities > Vertical Alignment"
+				"title": "CodyHouse Docs: Utilities > Vertical Align"
 			},
 			{
 				"command": "extension.codyhouseDocsUtilitiesTypography",
 				"title": "CodyHouse Docs: Utilities > Typography"
+			},
+			{
+				"command": "extension.codyhouseDocsUtilitiesWhiteSpace",
+				"title": "CodyHouse Docs: Utilities > White Space"
 			},
 			{
 				"command": "extension.codyhouseDocsUtilitiesColor",
@@ -279,8 +301,16 @@
 				"title": "CodyHouse Docs: Utilities > Position"
 			},
 			{
+				"command": "extension.codyhouseDocsUtilitiesZIndex",
+				"title": "CodyHouse Docs: Utilities > Z-Index"
+			},
+			{
 				"command": "extension.codyhouseDocsUtilitiesOverflow",
 				"title": "CodyHouse Docs: Utilities > Overflow"
+			},
+			{
+				"command": "extension.codyhouseDocsUtilitiesOpacity",
+				"title": "CodyHouse Docs: Utilities > Opacity"
       },
 			{
 				"command": "extension.codyhouseDocsUtilitiesBackground",
